--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "C_Cpp.errorSquiggles": "Enabled",
     "files.associations": {
-        "vector": "cpp"
+        "vector": "cpp",
+        "cmath": "cpp",
+        "iostream": "cpp"
     }
 }
